--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/base_AppTheme"
+        android:theme="@style/common_AppTheme"
         tools:ignore="UnusedAttribute">
 
         <!-- 屏幕适配基准DP -->
