--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
         jcenter()
         mavenCentral()
         maven { url 'https://maven.google.com' }
+        maven { url 'https://www.jitpack.io' }
     }
     dependencies {
         classpath ProjectPluginManager.AndroidToolsPlugin
@@ -20,6 +21,7 @@ allprojects {
         google()
         jcenter()
         mavenCentral()
+        maven { url 'https://www.jitpack.io' }
     }
 }
 
